// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should support the offline status 1`] = `
<styled.svg
  status="online"
  viewBox="0 0 10 10"
>
  <circle
    cx="5"
    cy="14"
    fill="currentColor"
    r="5"
    transform="translate(0 -9)"
  />
</styled.svg>
`;

exports[`should support the online status 1`] = `
<styled.svg
  status="offline"
  viewBox="0 0 10 10"
>
  <circle
    cx="5"
    cy="14"
    fill="currentColor"
    r="5"
    transform="translate(0 -9)"
  />
</styled.svg>
`;
